done with data extractor

--- a/src/content/tile.html
+++ b/src/content/tile.html
@@ -24,9 +24,7 @@
 				class="bb-tile-content collapse in"
 				aria-expanded="true"
 				aria-hidden="false">
-				<div class="bb-tile-content-section">
-					
-				</div>
+				<div class="bb-tile-content-section"></div>
 			</div>
 		</section>
 	</div>
