--- a/src/content/tile.html
+++ b/src/content/tile.html
@@ -24,7 +24,12 @@
 				class="bb-tile-content collapse in"
 				aria-expanded="true"
 				aria-hidden="false">
-				<div class="bb-tile-content-section"></div>
+				<div class="bb-tile-content-section">
+					<div
+						class="muted"
+						id="gradeChanges"
+						style="font-size: 11.5px;"></div>
+				</div>
 			</div>
 		</section>
 	</div>
