--- a/src/content/tile.html
+++ b/src/content/tile.html
@@ -28,7 +28,7 @@
 					<div
 						class="muted"
 						id="gradeChanges"
-						style="font-size: 11.5px;"></div>
+						style="font-size: 11.5px"></div>
 				</div>
 			</div>
 		</section>
