--- a/src/resources/tile.html
+++ b/src/resources/tile.html
@@ -1,36 +1,108 @@
-<div id="gradesTile">
-	<div class="ch col-md-3">
-		<section id="grades" class="bb-tile">
-			<div
-				class="bb-tile-title"
-				data-toggle="collapse"
-				data-target="#gradesCollapse">
-				<div class="bb-tile-header-with-content">
-					<h2 class="bb-tile-header">Grades</h2>
-				</div>
-				<div class="bb-tile-header-column-tools">
-					<div class="bb-tile-tools">
-						<button
-							type="button"
-							class="fa fa-chevron-down bb-tile-chevron"></button>
-						<button
-							type="button"
-							class="fa fa-chevron-up bb-tile-chevron"></button>
+<div class="row">
+	<div id="themesTile">
+		<div class="ch col-md-4">
+			<section id="themes" class="bb-tile">
+				<div
+					class="bb-tile-title"
+					data-toggle="collapse"
+					data-target="#themesCollapse">
+					<div class="bb-tile-header-with-content">
+						<h2 class="bb-tile-header">Themes</h2>
+					</div>
+					<div class="bb-tile-header-column-tools">
+						<div class="bb-tile-tools">
+							<button
+								type="button"
+								class="fa fa-chevron-down bb-tile-chevron"></button>
+							<button
+								type="button"
+								class="fa fa-chevron-up bb-tile-chevron"></button>
+						</div>
 					</div>
 				</div>
-			</div>
-			<div
-				id="gradesCollapse"
-				class="bb-tile-content collapse in"
-				aria-expanded="true"
-				aria-hidden="false">
-				<div class="bb-tile-content-section">
-					<div
-						class="muted"
-						id="gradeChanges"
-						style="font-size: 11.5px"></div>
+				<div
+					id="themesCollapse"
+					class="bb-tile-content collapse in"
+					aria-expanded="true"
+					aria-hidden="false">
+					<div class="bb-tile-content-section">
+						<div class="muted" style="font-size: 11.5px">
+							Theme Changes
+						</div>
+					</div>
 				</div>
-			</div>
-		</section>
+			</section>
+		</div>
+	</div>
+	<div id="gradesTile">
+		<div class="ch col-md-4">
+			<section id="grades" class="bb-tile">
+				<div
+					class="bb-tile-title"
+					data-toggle="collapse"
+					data-target="#gradesCollapse">
+					<div class="bb-tile-header-with-content">
+						<h2 class="bb-tile-header">Grades</h2>
+					</div>
+					<div class="bb-tile-header-column-tools">
+						<div class="bb-tile-tools">
+							<button
+								type="button"
+								class="fa fa-chevron-down bb-tile-chevron"></button>
+							<button
+								type="button"
+								class="fa fa-chevron-up bb-tile-chevron"></button>
+						</div>
+					</div>
+				</div>
+				<div
+					id="gradesCollapse"
+					class="bb-tile-content collapse in"
+					aria-expanded="true"
+					aria-hidden="false">
+					<div class="bb-tile-content-section">
+						<div
+							class="muted"
+							id="gradeChanges"
+							style="font-size: 11.5px"></div>
+					</div>
+				</div>
+			</section>
+		</div>
+	</div>
+	<div id="assignmentsTile">
+		<div class="ch col-md-4">
+			<section id="assignments" class="bb-tile">
+				<div
+					class="bb-tile-title"
+					data-toggle="collapse"
+					data-target="#assignmentsCollapse">
+					<div class="bb-tile-header-with-content">
+						<h2 class="bb-tile-header">Assignments</h2>
+					</div>
+					<div class="bb-tile-header-column-tools">
+						<div class="bb-tile-tools">
+							<button
+								type="button"
+								class="fa fa-chevron-down bb-tile-chevron"></button>
+							<button
+								type="button"
+								class="fa fa-chevron-up bb-tile-chevron"></button>
+						</div>
+					</div>
+				</div>
+				<div
+					id="assignmentsCollapse"
+					class="bb-tile-content collapse in"
+					aria-expanded="true"
+					aria-hidden="false">
+					<div class="bb-tile-content-section">
+						<div class="muted" style="font-size: 11.5px">
+							Assignments
+						</div>
+					</div>
+				</div>
+			</section>
+		</div>
 	</div>
 </div>
