bunch of changes

--- a/src/resources/tile.html
+++ b/src/resources/tile.html
@@ -32,15 +32,17 @@
 								style="font-size: 11.5px; margin-right: 5px">
 								Theme Changes
 							</span>
-							<button id="themeReset" style="font-size: 11.5px">Reset</button>
+							<button id="themeReset" style="font-size: 11.5px">
+								Reset
+							</button>
 						</div>
 						<input
 							type="range"
 							id="hueRange"
-							class="form-range"
 							min="0"
-							max="359"
-							value="211" />
+							max="359" />
+						
+						<div id="advanced"></div>
 					</div>
 				</div>
 			</section>
