--- a/src/resources/tile.html
+++ b/src/resources/tile.html
@@ -36,6 +36,7 @@
 								Reset
 							</button>
 						</div>
+						<input type="checkbox" name="grayscale" id="grayscale">
 						<input
 							type="range"
 							id="hueRange"
