first alpha release!

--- a/src/resources/tile.html
+++ b/src/resources/tile.html
@@ -36,6 +36,7 @@
 								Reset
 							</button>
 						</div>
+						Grayscale
 						<input type="checkbox" name="grayscale" id="grayscale">
 						<input
 							type="range"
@@ -80,6 +81,7 @@
 							class="muted"
 							id="gradeChanges"
 							style="font-size: 11.5px"></div>
+							<div id="gpa"></div>
 					</div>
 				</div>
 			</section>
