--- a/src/resources/tile.html
+++ b/src/resources/tile.html
@@ -1,2 +1,1 @@
-<div style="font-size: 11.5px; padding-bottom: 6px;" class="muted" id="gradeChanges"></div>
-<div id="gpa"></div>
+<div style="font-size: 12px; margin-top: 10px" id="gradeChanges"></div>
